test/libyul/yulSyntaxTests/linkersymbol_shadowing.yul
{
    function linkersymbol(a) {}
}
// ====
// dialect: zvm
// ----
// ParserError 5568: (15-27): Cannot use builtin function name "linkersymbol" as identifier name.
